--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,305 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  width: 100%;
+  height: 100%;
+}
+
+
+#foto {
+  border-radius: 50%;
+  width: 100px;
+}
+
+#yo {
+  margin: 0px 10px;
+}
+
+li, a {
+  list-style: none;
+  margin: 0px 10px;
+}
+
+#comentario {
+  font-size: 16px;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+#skills {
+  width: 400px;
+  padding: 10px;
+  border: white solid 1px;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#titulo_0, #titulo_1 {
+  border: 1px solid white;
+  margin: 10px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+
+#texto_0, #texto_1 {
+  padding: 10px 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#equipo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 100px auto;
+}
+
+
+.form {
+  width: 350px;
+  margin: auto;
+  padding: 60px 30px;
+  border: 1px solid white;
+  border-radius: 10px;
+}
+
+#mensaje, #nombre,
+#email, #telefono {
+  border: 1px solid aqua;
+}
+
+.boton {
+  width: 100px;
+  margin: 10px;
+  margin-left: 15%;
+  margin-top: 10px;
+}
+
+#button {
+  width: 200px;
+  border: 1px solid white;
+}
+
+#alerta {
+  margin-left: 0%;
+  background-color: bisque;
+  width: 200px;
+  height: 40px;
+  padding: 5px 20px;
+  font-size: 18px;
+  border: 1px solid aqua;
+  column-rule-color: black;
+}
+
+
+i {
+  padding: 6px;
+}
+
+#gm, #fb, #tw, #ws, #in, #lk, #gh {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#gm:hover {
+  color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#fb:hover {
+  color: #3b5998;
+}
+
+#tw:hover{
+  color: aqua;
+}
+
+#ws:hover {
+  color: #00bb2d;
+}
+
+#in:hover{
+  color: #405DE6;
+}
+
+#lk:hover{
+  color: #0e76a8;
+}
+
+#gh:hover{
+  color:  #171515;
+}
+
+
+
+
+@media (min-width: 400px) {
+  .App-header {
+    
   }
-  to {
-    transform: rotate(360deg);
+  #texto_0, #texto_1 {
+    padding: 0px 40px ;
+  }
+  #titulo_0, #titulo_1 {
+    width: 350px;
+    margin: 10px auto;
+    border-radius: 10px;
+  }
+  #equipo {
+    width: 400px;
+    margin: auto;
+  }
+  .infor {
+    
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 10px;
+  }
+
+  #map {
+    border: 1px solid white;
+    margin-left: 40px;
+    height: 400px;
+    border-radius: 10px;
+  }
+
+  #city {
+    width: 400px;
+    height: 100px;
+    padding-left: 10px;
+    
+    margin: 10px;
+    margin-left: 40px;
+  }
+
+  #temp {
+    width: 300px;
+    height: 280px;
+    padding-left: 10px;
+    padding: 10px;
+    
+    margin: 10px;
+    margin-left: 85px;
+  }
+}
+
+@media (min-width: 600px) {
+  .App-header {
+    
+  }
+  #texto_0, #texto_1 {
+    padding: 0px 80px ;
+  }
+  #titulo_0, #titulo_1 {
+    width: 350px;
+    margin: 10px auto;
+    border-radius: 10px;
+  }
+  #equipo {
+    width: 450px;
+    margin: auto;
+  }
+  .infor {
+    
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 10px;
+  }
+
+  #map {
+    border: 1px solid white;
+    margin: auto;
+    margin-left: 160px;
+    height: 400px;
+    border-radius: 10px;
+  }
+
+  #city {
+    width: 500px;
+    height: 100px;
+    padding-left: 10px;
+    
+    margin: 10px;
+  }
+
+  #temp {
+    width: 345px;
+    height: 400px;
+    padding-left: 10px;
+    padding: 10px;
+    
+    margin: 10px;
+  }
+  
+}
+
+
+
+@media (min-width: 1100px) {
+  .App-header {
+    
+  }
+  #texto_0, #texto_1 {
+    padding: 0px 200px ;
+  }
+  #titulo_0, #titulo_1 {
+    width: 350px;
+    margin: 10px auto;
+    border-radius: 10px;
+  }
+}
+
+
+@media (min-width: 1200px) {
+  .App-header {
+
+  }
+  #texto_0, #texto_1 {
+    padding: 0px 200px ;
+  }
+  #titulo_0, #titulo_1 {
+    width: 350px;
+    margin: 10px auto;
+    border-radius: 10px;
+  }
+  #equipo {
+    width: 500px;
+    margin: auto;
+  }
+
+  .infor {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 10px;
+  }
+
+  #map {
+    border: 1px solid white;
+    margin: 10px;
+    margin-left: 20px;
+    height: 400px;
+    border-radius: 10px;
+  }
+
+  #city {
+    width: 500px;
+    height: 100px;
+    padding-left: 10px;
+    margin: 10px;
+  }
+
+  #temp {
+    width: 345px;
+    height: 400px;
+    padding-left: 10px;
+    padding: 10px;
+    margin: 10px;
   }
 }
