--- a/src/Complementos/Rutas/Porfolio/style.css
+++ b/src/Complementos/Rutas/Porfolio/style.css
@@ -4,6 +4,9 @@
     color: white;
     width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
   }
   #tituloprincipal {
     width: 400px;
@@ -86,21 +89,25 @@
   @media (min-width: 300px)  {
     #tituloprincipal {
       width: 330px;
+      margin: 30px auto;
     }
+
+
     #card {
       width: 360px;
+      height: 400px;
       border: 1px solid white;
       border-radius: 10px;
     }
     #boton {
-      margin: auto;
+      margin: 15px auto;
       width: 335px;
     }
    
 
     #imge {
       width: 335px;
-      height: 200px;
+      height: 240px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -117,5 +124,8 @@
       margin: 0px auto;
       font-size: 18px;
     }
-    
+    .contenedor {
+      width: 100%;
+      height: auto;
+    }
   }
