--- a/src/Complementos/Rutas/MostarContactos/contactos.css
+++ b/src/Complementos/Rutas/MostarContactos/contactos.css
@@ -1,11 +1,43 @@
-
-
-.modal {
-   background-color: blueviolet;
-   display: none;
+#image {
+	border-radius: 10px;
+	border: 2px solid purple;
 }
 
+.modal {
+	position: fixed;
+	z-index: 999;
+	top: 0;
+	left: 0;
+	width: 100%;
+	min-height: 100vh;
+	background-color: rgba(0, 0, 0, 0.75);
+	margin: auto;
+	display: none;
+	justify-content: center;
+	align-items: center;
+}
 
-.modal-open {
-  display: flex;
+.modal.is-open {
+	display: flex;
+}
+
+.modal-contanier {
+	position: relative;
+	min-width: 320px;
+	max-width: 450px;
+	min-height: 200px;
+	min-height: 400px;
+	overflow-y: auto;
+	padding: 1rem;
+	background-color: #fff;
+	border-radius: 10px;
+	box-shadow: navajowhite;
+}
+
+.modal-close {
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+	border-radius: 6px;
+	cursor: pointer;
 }
